--- a/work/second/index.html
+++ b/work/second/index.html
@@ -21,6 +21,14 @@
     </div>
     <script src="../../common/js/jquery.js"></script>
     <script>
+      $(function() {
+        $('.modal-show').click(function() {
+          $('.modal').fadeIn(500);
+        });
+        $('.modal-close').click(function() {
+          $('.modal').fadeOut(500);
+        });
+      });
       // 今回やるのはモーダルです。
       // .modal-show をクリックすることで .modal をfadeInさせる。
       // .modal-close をクリックで .modal をfadeOutさせる。
