add: jQuery thirdの回答

--- a/work/third/index.html
+++ b/work/third/index.html
@@ -24,6 +24,12 @@
     </div>
     <script src="../../common/js/jquery.js"></script>
     <script>
+      $(function() {
+        $('.nav').find('li').click(function() {
+          var list = $(this).index();
+          $('.contents').find('li').addClass('is-hidden').eq(list).removeClass('is-hidden');
+        });
+      });
       // 今回やるのはタブメニューです。
       // navの小要素であるliをクリックして、contents内の小要素であるli要素を表示させる。
       // .index() 要素のindexを取得します。
