--- a/work/fourth/index.html
+++ b/work/fourth/index.html
@@ -47,6 +47,14 @@
     </div>
     <script src="../../common/js/jquery.js"></script>
     <script>
+      $('.menu__list').find('li').hover(block, none);
+
+      function block() {
+        $(this).children().stop().slideDown();
+      };
+      function none() {
+        $(this).children('.menu__list__childList').slideUp();
+      };
       // 今回やるのはドロップメニューです。
       // メニューをhoverすると隠れている中のメニューが表示され、メニューから離れると中のメニューが非表示されるプログラムです。
       // 処理は関数化し、hoverしたら用意した関数を呼び出すようにしてください。
