--- a/work/fourth/index.html
+++ b/work/fourth/index.html
@@ -50,10 +50,10 @@
       $('.menu__list').find('li').hover(block, none);
 
       function block() {
-        $(this).children().stop().slideDown();
+        $(this).children().stop(true, false).slideDown();
       };
       function none() {
-        $(this).children('.menu__list__childList').slideUp();
+        $(this).children('.menu__list__childList').stop(true, false).slideUp();
       };
       // 今回やるのはドロップメニューです。
       // メニューをhoverすると隠れている中のメニューが表示され、メニューから離れると中のメニューが非表示されるプログラムです。
